<resources>
    <string name="app_name">Food Reminders</string>
    <string name="settings_activity">Settings</string>
    <string name="title_activity_add_food">Add a Food</string>
    <string name="title_activity_settings_menu">Settings Menu</string>
    <string name="description">Description</string>
    <string name="food_desc_ex">ie Bananas</string>
    <string name="food_quant_ex">1</string>
    <string name="quantity">Quantity</string>
    <string name="the_number_one">1</string>
    <string name="measurement">Measurement</string>
    <string name="food_measure_ex">ie cup(s)</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="purchase_date">Purchase Date</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="notification_channel_description">Food Expiry Reminders</string>
    <string name="set_date">Set Date</string>
    <string name="ex_date">1/1/2019</string>
    <string name="reload_list">Reload list</string>
</resources>
